modified frontend, schema and controller
